@@ -3,6 +3,7 @@ version 1.2
 - fixed a bug in clientsocket which can cause reconnect problems under some conditions
 - fixed Nickname bug in agsXMPP.protocol.extensions.bookmarks.Conference
 - added  new constructor to XmppClientConnenction
+- added implicit operators to Jid class
 
 version 1.1
 ============
